<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GameTimeGiving</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="fb_app_id">214236638786404</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="exit">Exit</string>
    <string name="emailaddress">E-mail Address</string>
    <string name="et_emailid">Update EmailID</string>
    <string name="et_password">Update Password</string>
    <string name="Charityprompt">Choose up to 4 Charities</string>
    <string name="Teamprompt">Choose up to 5 teams to following </string>
    <string name="home">Home</string>
    <string name="action_settings">settings</string>
    <string name="password">Password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="orsigninwith">or sign in with</string>
    <string name="forgat_password">Forgot Password?</string>
    <string name="signup">New here?Sign Up</string>
    <string name="title_signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">E-mail address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="browse_images">Browse Images</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_update">UPDATE</string>
    <string name="et_browseimage">Browse image</string>
    <string name="btn_select">Select</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="selectOrganization">Select Charity</string>
    <string name="done">Done</string>
    <string name="font_kozgopro">kozgopro_light.otf</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_copy"><Data><![CDATA[ &#169; 2015  Game Time Giving ]]></Data></string>
    <string name="about_credits"><Data><![CDATA[ <a href="http://www.gametimegiving.com/content/credits">Credits</a> ]]></Data></string>
    <string name="about_rate"><Data><![CDATA[ <a href="http://www.gametimegiving.com/url/rate">Rate this Application</a> ]]></Data></string>
    <string name="about_support"><Data><![CDATA[ <a href="http://www.gametimegiving.com/content/support">Support</a> ]]></Data></string>
    <string name="about_terms"><Data><![CDATA[ <a href="http://www.gametimegiving.com/content/terms">Terms of Service</a> ]]></Data></string>
    <string name="about_privacy"><Data><![CDATA[ <a href="http://www.gametimegiving.com/content/privacy">Privacy Policy</a> ]]></Data></string>
    <string name="maximum_charity_limit_reached">Max Charity Limit Reached</string>
    <string name="visitingteam">Visiting</string>
    <string name="hometeam">Home</string>
    <string name="title_activity_onboard">onboard</string>
    <string name="benefitone">This is the Primary Benefit</string>
    <string name="benefittwo">This is the second benefit</string>
    <string name="benefitthree">This is the 3rd benefit</string>
    <string name="benefit3"><ul><li>Turn your pledge into a donation</li>\n<li>\<b>OutGive</b> the other team\'s fans!</li></ul></string>
    <string name="benefit2"><li>Get notified when your teams are playing</li>\n<li>Compete against the other team\'s fans in a <b>Giving Competition</b></li></string>
    <string name="benefit1"><li>Your favorite Sports teams</li>\n<li>Your favorite charities</li></string>
    <string name="onboardingscreen2headertext">Compete!</string>
    <string name="InValidProfileErrorMessage">Please Select Charity and Team</string>
    <string name="gtglogo">GTGLogo</string>
    <string name="selectgame">Select a game</string>
    <string name="versionnumber">Version 1.01</string>
    <string name="usersname">Your Name</string>
    <string name="user_image">User Image</string>
    <string name="your_pledges">My Pledge:</string>
    <string name="_0_00">$0.00</string>
    <string name="donate_now">Donate Now</string>
    <string name="pledgeamt1">$1</string>
    <string name="pledgeamout2">$2</string>
    <string name="pledgeamount3">$5</string>
    <string name="undo_last_pledge">UNDO LAST PLEDGE</string>
    <string name="game_board_title">Game Board</string>
    <string name="period">Time Left</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="zerodollars">$0.00</string>
    <string name="profile">My Profile</string>
    <string name="charities">View Charities</string>
    <string name="teams">View Teams</string>
    <string name="teamstats">Team Stats</string>
    <string name="mystats">My Stats</string>

</resources>