<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_emailid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/et_emailid"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:padding="4dp"
            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color" />


        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custombutton"
            android:text="@string/btn_update"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="bottom|center"
            android:text="@string/versionnumber"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>