<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#001325"
        android:gravity="center"
        android:text="@string/title_signup"
        android:textColor="#fff"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"

        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="5dp"

            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color" />

        <EditText
            android:id="@+id/etemailaddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"

            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="5dp"

            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color" />

        <EditText
            android:id="@+id/etconfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"

            android:padding="5dp"
            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color" />

        <Button
            android:id="@+id/btn_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/custombutton"
            android:text="@string/btn_signup"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
