<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/ll_container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/drawerback">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.gametimegiving.mobile.Utils.RoundedImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="110dp"
                    android:layout_height="110dp"

                    android:layout_margin="15dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/usericon" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="45dp"
                    android:singleLine="true"
                    android:text="Your Name"
                    android:textSize="15sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/editimage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="110dp"
                android:src="@drawable/editimage" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_top"
            android:layout_marginRight="@dimen/margin_top"
            android:layout_marginTop="40dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btncharity_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_bg"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/padding_5"
                    android:paddingRight="@dimen/padding_25"
                    android:singleLine="true"
                    android:text="@string/Charityprompt"
                    android:textAllCaps="false"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/textsize_18" />

                <Button
                    android:id="@+id/btnteam_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/spinner_bg"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/padding_5"
                    android:paddingRight="@dimen/padding_25"
                    android:singleLine="true"
                    android:text="@string/Teamprompt"
                    android:textAllCaps="false"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/textsize_18" />


                <Spinner
                    android:id="@+id/spinner3"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_50"
                    android:layout_marginTop="@dimen/margin_15"

                    android:entries="@array/donationmethod"
                    android:popupBackground="#fff"
                    android:spinnerMode="dropdown" />


                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@drawable/custombutton"
                    android:text="@string/btn_save"
                    android:textColor="#fff"
                    android:textSize="@dimen/textsize_20" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</LinearLayout>

